apps/pihole/crds.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ingressroute-tcp
  namespace: pihole
spec:
  entryPoints:
    - dns
  routes:
    - match: HostSNI(`*`)
      services:
        - name: pihole-dns
          port: 53
          # nativeLB: true
